--- a/src/Card.css
+++ b/src/Card.css
@@ -11,5 +11,9 @@ div.singlecard{
 }
 
 #cardname{
-    text-align: center; 
+    text-align: center;
+    font-family:  Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-size: 2.875em; 
+    padding-bottom: 25px;
 }
